--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "googleapis": "^126.0.1",
         "multer": "^1.4.5-lts.1",
         "uuid": "^9.0.1",
-        "yt-dlp-wrap": "^2.3.12"
+        "yt-dlp-wrap": "^2.3.12",
+        "ytdl-core": "^4.11.2"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
